:upd create apps components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar> 
-    <ion-title>Super Tabs</ion-title>
+    <ion-title>{{title}}</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
