--- a/src/app/@features/liste-additive/liste-additive.component.html
+++ b/src/app/@features/liste-additive/liste-additive.component.html
@@ -1,1 +1,41 @@
-<p>liste-additive works!</p>
+<ion-content>
+    <ion-segment value="all" (ionChange)="filterBy($event)">
+      <ion-segment-button value="all">
+        <ion-icon name="infinite-outline"></ion-icon>
+      </ion-segment-button>
+      <ion-segment-button value="0">
+        <ion-icon name="happy-outline"></ion-icon>
+      </ion-segment-button>
+      <ion-segment-button value="1">
+        <ion-icon name="sad-outline"></ion-icon>
+      </ion-segment-button>
+      <ion-segment-button value="2">
+        <ion-icon name="skull-outline"></ion-icon>
+      </ion-segment-button>
+    </ion-segment>
+<!-- <ion-list>
+    <ion-item class="ion-no-padding" detail="true" detail-icon="caret-forward-circle" *ngFor="let post of (post$|async)?.slice(min,max)" [routerLink]="'../detail/' + post.id.toString()">
+        <ion-grid>
+            <ion-row>
+                <ion-col size="3" class="ion-no-padding ion-no-margin">
+                    <ion-item [color]="post.level|color" class="ion-no-margin ion-no-padding">
+                        <ion-label>E{{post.id}}</ion-label>
+                    </ion-item>
+            </ion-col>
+                <ion-col size="9">
+                    <ion-label>
+                    <h3>{{post.name}}</h3>
+                    <p>{{post.type}}</p>
+                </ion-label>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+    </ion-item>
+</ion-list> -->
+<ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+</ion-content>
