--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,15 +8,15 @@
     <super-tabs-toolbar slot="bottom">
       <super-tab-button>
         <ion-icon name="search"></ion-icon>
-        <ion-label>Page #1</ion-label>    
+        <ion-label>rechercher</ion-label>    
       </super-tab-button>
       <super-tab-button>
         <ion-icon name="list"></ion-icon>
-        <ion-label>Page #2</ion-label>    
+        <ion-label>Liste</ion-label>    
       </super-tab-button>
       <super-tab-button>
         <ion-icon name="heart"></ion-icon>
-        <ion-label>Page #3</ion-label>    
+        <ion-label>Favoris</ion-label>    
       </super-tab-button>
     </super-tabs-toolbar>
     <super-tabs-container>
