--- a/src/app/@features/liste-additives/liste-additives.component.html
+++ b/src/app/@features/liste-additives/liste-additives.component.html
@@ -14,6 +14,7 @@
       </ion-segment-button>
     </ion-segment>
 <ion-list>
+  {{this.items$|async|json}}
     <!-- <ion-item class="ion-no-padding" detail="true" detail-icon="caret-forward-circle" *ngFor="let post of (post$|async)?.slice(min,max)" [routerLink]="'../detail/' + post.id.toString()">
         <ion-grid>
             <ion-row>
