--- a/src/app/@features/liste-additives/liste-additives.component.html
+++ b/src/app/@features/liste-additives/liste-additives.component.html
@@ -1,42 +1,36 @@
 <ion-content>
-    <ion-segment value="all" (ionChange)="filterBy($event)">
-      <ion-segment-button value="all">
-        <ion-icon name="infinite-outline"></ion-icon>
-      </ion-segment-button>
-      <ion-segment-button value="0">
-        <ion-icon name="happy-outline" class="greenButton"></ion-icon>
-      </ion-segment-button>
-      <ion-segment-button value="1">
-        <ion-icon name="sad-outline" class="orangeButton"></ion-icon>
-      </ion-segment-button>
-      <ion-segment-button value="2">
-        <ion-icon name="skull-outline" class="redButton"></ion-icon>
-      </ion-segment-button>
-    </ion-segment>
-<ion-list>
-  {{this.items$|async|json}}
-    <!-- <ion-item class="ion-no-padding" detail="true" detail-icon="caret-forward-circle" *ngFor="let post of (post$|async)?.slice(min,max)" [routerLink]="'../detail/' + post.id.toString()">
-        <ion-grid>
-            <ion-row>
-                <ion-col size="3" class="ion-no-padding ion-no-margin">
-                    <ion-item [color]="post.level|color" class="ion-no-margin ion-no-padding">
-                        <ion-label>E{{post.id}}</ion-label>
-                    </ion-item>
-            </ion-col>
-                <ion-col size="9">
-                    <ion-label>
-                    <h3>{{post.name}}</h3>
-                    <p>{{post.type}}</p>
-                </ion-label>
-                </ion-col>
-            </ion-row>
-        </ion-grid>
-    </ion-item> -->
-</ion-list>
-<ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
-    <ion-infinite-scroll-content
-      loadingSpinner="bubbles"
-      loadingText="chargement...">
+  <ion-segment value="all" (ionChange)="filterBy($event)" mode="md" slot="fixed">
+    <ion-segment-button value="all">
+      <ion-icon name="infinite-outline"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button value="0">
+      <ion-icon name="happy-outline" class="greenButton"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button value="1">
+      <ion-icon name="sad-outline" class="orangeButton"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button value="2">
+      <ion-icon name="skull-outline" class="redButton"></ion-icon>
+    </ion-segment-button>
+  </ion-segment>
+  <ion-list class="ion-no-padding">
+    <ion-item detail="true" detail-icon="caret-forward-circle" [routerLink]="'../detail/' + item.id"
+      *ngFor="let item of (items$|async)?.slice(min, max)">
+      <ion-thumbnail [className]="'ion-no-margin ion-color-' + (item?.level|color)">
+        {{item.id}}
+      </ion-thumbnail>
+      <ion-label class="ion-padding-start">
+        <ion-text>
+          <h3>{{item.name}}</h3>
+        </ion-text>
+        <ion-text>
+          <p>{{item.type}}</p>
+        </ion-text>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="chargement...">
     </ion-infinite-scroll-content>
   </ion-infinite-scroll>
 </ion-content>
