--- a/src/app/@features/liste-additives/liste-additives.component.scss
+++ b/src/app/@features/liste-additives/liste-additives.component.scss
@@ -11,6 +11,34 @@ ion-icon.orangeButton {
     font-size: 24px;
 }
 ion-segment {
-    --background: transparent;
-    margin-top: 5px;
+    --background: rgb(240, 240, 240);
+    margin-top: 0px;
 }
+ion-list{
+    padding-top: 48px;
+}
+ion-item {
+    --padding-start: 0
+  }
+  ion-thumbnail {
+    height: 100%;
+    display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: center;
+      align-items: center;
+      align-content: center;
+  }
+  
+  ion-thumbnail.ion-color-success {
+      background: var(--ion-color-success);
+  }
+  ion-thumbnail.ion-color-warning {
+      background: var(--ion-color-warning);
+  }
+  ion-thumbnail.ion-color-orange {
+      background: var(--ion-color-orange);
+  }
+  ion-thumbnail.ion-color-danger {
+      background: var(--ion-color-danger);
+  }
