--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -2,7 +2,7 @@
 /* This is just a placeholder file For more info, please see: */
 /* https://ionicframework.com/docs/theming/basics */
 
-/* To quickly generate your own theme, check out the color generator */
+/* To quickly generate your own theme, check out the color generatore */
 /* https://ionicframework.com/docs/theming/color-generator */
 :root {
     --ion-color-primary: #e0e0e0;
